--- a/requirements.txt
+++ b/requirements.txt
@@ -21,24 +21,31 @@ more_itertools
 # - see requirements_raghu_daseg_v2_pip_list.txt
 ###
 absl-py==0.11.0
-argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1605217004767/work
+# argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1605217004767/work
+argon2-cffi
 async-generator==1.10
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1605083924122/work
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+# attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1605083924122/work
+attrs
+# backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+backcall 
 backports.functools-lru-cache==1.6.1
 biopython>=1.78
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1600454382015/work
+# bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1600454382015/work
+bleach
 blis==0.4.1
 brotlipy==0.7.0
 cachetools==4.1.1
 catalogue==1.0.0
 certifi==2020.11.8
-cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1606601123836/work
-chardet @ file:///home/conda/feedstock_root/build_artifacts/chardet_1602255302199/work
+# cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1606601123836/work
+cffi
+# chardet @ file:///home/conda/feedstock_root/build_artifacts/chardet_1602255302199/work
+chardet
 click==7.1.2
 cloudpickle==1.6.0
 colorama==0.4.4
-cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography_1604179079864/work
+# cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography_1604179079864/work
+cryptography
 cycler==0.10.0
 cymem==2.0.4
 Cython==0.29.21
@@ -54,7 +61,8 @@ dill==0.3.3
 distributed==2.30.1
 docopt==0.6.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1605121927639/work/dist/entrypoints-0.3-py2.py3-none-any.whl
+# entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1605121927639/work/dist/entrypoints-0.3-py2.py3-none-any.whl
+entrypoints
 filelock==3.0.12
 fsspec==2021.6.0
 future==0.18.2
@@ -66,18 +74,27 @@ grpcio==1.33.2
 h5py==3.1.0
 HeapDict==1.0.1
 huggingface-hub==0.0.10
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1593328102638/work
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1606885585839/work
-iniconfig @ file:///home/conda/feedstock_root/build_artifacts/iniconfig_1603384189793/work
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1605455374814/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1604159561527/work
+# idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1593328102638/work
+idna
+# importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1606885585839/work
+importlib-metadata
+# iniconfig @ file:///home/conda/feedstock_root/build_artifacts/iniconfig_1603384189793/work
+iniconfig 
+# ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1605455374814/work/dist/ipykernel-5.3.4-py3-none-any.whl
+ipykernel 
+# ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1604159561527/work
+ipython
 ipython-genutils==0.2.0
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1605054524035/work
+# jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1605054524035/work
+jedi
 Jinja2==2.11.2
 joblib==0.17.0
-json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1600692310011/work
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema_1602551949684/work
-jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1598486169312/work
+# json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1600692310011/work
+json5 
+# jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema_1602551949684/work
+jsonschema
+# jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1598486169312/work
+jupyter-client
 jupyter-core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1605735009305/work
 jupyterlab==2.2.9
 jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1601375948261/work
